fix: Change title

--- a/front-pi/src/app/views/pagamento/pagamento.component.html
+++ b/front-pi/src/app/views/pagamento/pagamento.component.html
@@ -4,7 +4,7 @@
   </div>
   <form>
     <div class="title">
-      <h2>Insira os Dados do Cliente</h2>
+      <h2>Insira os Dados de Pagamento</h2>
     </div>
     <fieldset *ngIf="pagamentoEdicao">
       <div class="field-group">
